added create reservation API
